# keras3-learning

./: README.md  pyproject.toml
visual/: mnits.ipynb
